# ADCSAD

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  adcs_scan.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
adcs_lab/attacks/: esc1_exploit.py  esc2_enrollment_agent_abuse.py  esc3_dangerous_eku_demo.py  esc4_template_misuse.py  esc8_ntlm_relay_simulation.py
adcs_lab/defence/hardening/: audit_ca_permissions.ps1  remove_dangerous_ekus.ps1  restrict_enrollment.ps1
adcs_lab/defence/sentinel/: workbook.json
adcs_lab/defence/sysmon_rules/: adcs_sysmon.xml
adcs_lab/detection/: adcs_enum.py  bloodhound_ingestor_config.json  pki_misconfig_scanner.py
adcs_lab/detection/kql_queries/: detect_enrollment_agent_anomalies.kql  detect_failed_enrollments.kql  detect_kerberos_certificate_abuse.kql
adcs_lab/docs/: README.md  api_reference.md  architecture.md  esc_reference.md  usage.md
tests/: test_cli.py  test_scanner.py
